# dns-relay

./: CMakeLists.txt  dnsrelay.txt
include/: bp-doublelist.h  bp-hashtable.h  bufferpool.h  config.h  convert.h  pmhashtable.h  portmap.h  print.h  query.h  struct.h  tools.h  utils.h
src/: bp-doublelist.c  bp-hashtable.c  bufferpool.c  config.c  convert.c  main.c  pmhashtable.c  portmap.c  query.c  struct.c  tools.c
